--- a/css/base.css
+++ b/css/base.css
@@ -16,6 +16,10 @@ body {
   color: white;
 }
 
+pre {
+  color: #eee;
+}
+
 /***********************************************************************
 Top bar
 ***********************************************************************/
